# P1-Edge-VPS

./: .env.example  .gitignore  Architecture.md  CLAUDE.md  Caddyfile  Makefile  README.md  SKILL.md  docker-compose.edge.yml  docker-compose.vps.yml  pyproject.toml  repository.yaml  technicaldesign.md
edge/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
edge/src/: config.py  health.py  logging_config.py  main.py  normalizer.py  poller.py  spool.py  uploader.py
edge/tests/: __init__.py  conftest.py  test_config.py  test_health.py  test_main.py  test_normalizer.py  test_poller.py  test_spool.py  test_uploader.py
edge/tests/fixtures/: hw_responses.json
vps/: .env.example  Caddyfile  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt
vps/src/: __init__.py  config.py  logging_config.py  main.py
vps/src/api/: __init__.py  capacity.py  daily_energy.py  deps.py  health.py  ingest.py  realtime.py  series.py
vps/src/auth/: __init__.py  bearer.py
vps/src/cache/: __init__.py  redis_client.py
vps/src/db/: __init__.py  models.py  session.py
vps/src/db/migrations/: __init__.py  env.py
vps/src/db/migrations/versions/: 001_initial_schema.py  002_continuous_aggregates.py  003_add_sample_count.py  004_fix_energy_aggregates.py  (+1 more)
vps/src/services/: __init__.py  aggregation.py  capacity.py  ingestion.py
vps/tests/: __init__.py  conftest.py  test_auth.py  test_capacity.py  test_daily_energy.py  test_health.py  test_ingest.py  test_models.py  test_realtime.py  test_series.py
vps/tests/fixtures/: sample_data.json
(+16 files in other folders)
