[project]
name = "p1-edge-vps"
version = "0.1.0"
description = "VPS API for P1-Edge-VPS energy telemetry platform"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
